--- a/BasicTriangle/log.config
+++ b/BasicTriangle/log.config
@@ -7,7 +7,8 @@ handlers = java.util.logging.FileHandler
 #java.util.logging.FileHandler.pattern = %h/java%u.log
 #java.util.logging.FileHandler.pattern = ThreadService_%u.log
 java.util.logging.FileHandler.pattern = SimpleTest.log
-java.util.logging.FileHandler.limit = 50000
+#java.util.logging.FileHandler.limit = 50000
+java.util.logging.FileHandler.limit = 10000000
 java.util.logging.FileHandler.count = 1
 #java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 #java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
